fixed tooltip color for light theme for better contrast

--- a/src/app/styles/themes/theme-light.scss
+++ b/src/app/styles/themes/theme-light.scss
@@ -26,8 +26,6 @@ body
         --dropdown-item-color: var(--color-structure-11);
         --context-menu-background-color: var(--color-structure-0);
         --context-menu-color: var(--color-structure-11) !important;
-        --tooltip-background-color: var(--color-structure-0);
-        --tooltip-color: var(--color-structure-11);
         
         // Table
         --table-head-background-color: var(--color-structure-0);
